<resources>
  <string name="app_name">War Worlds 2</string>

  <string name="start">Start</string>
  <string name="start_game">Start Game</string>
  <string name="how_to_play">How to Play</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="website">Website</string>
  <string name="realm_label">Realm: %s</string>
  <string name="switch_realm">Switch Realm</string>
  <string name="signin">Sign in</string>
  <string name="switch_user">Switch user</string>
  <string name="options">Options</string>
  <string name="cancel">Cancel</string>
  <string name="done">Done</string>
  <string name="next">Next</string>
  <string name="back">Back</string>
  <string name="empire">Empire</string>
  <string name="sitrep">Situation report</string>
  <string name="view">View</string>
  <string name="rename">Rename</string>
  <string name="alliance">Alliance</string>
  <string name="build">Build</string>
  <string name="focus">Focus</string>
  <string name="boost">Boost</string>
  <string name="attack">Attack</string>
  <string name="save">Save</string>
  <string name="colonize">Colonize</string>
  <string name="colonized">Colonized</string>
  <string name="merge">Merge</string>
  <string name="split">Split</string>
  <string name="move">Move</string>
  <string name="stance">Stance</string>
  <string name="native_colony">Native</string>
  <string name="uncolonized">Uncolonized</string>
  <string name="idle">idle</string>
  <string name="level">Level</string>
  <string name="send">Send</string>
  <string name="global">Global</string>
  <string name="new_group">New Group</string>
  <string name="intel">Intel.</string>
  <string name="locate">Locate</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="plus">+</string>
  <string name="minus">-</string>
  <string name="buildings">Buildings</string>
  <string name="ships">Ships</string>
  <string name="queue">Queue</string>
  <string name="overview">Overview</string>
  <string name="colonies">Colonies</string>
  <string name="fleets">Fleets</string>
  <string name="efficiency">Efficiency</string>
  <string name="upgrade">Upgrade</string>
  <string name="settings">Settings</string>
  <string name="starfield">Starfield</string>
  <string name="star_search">Search stars</string>

  <!-- Sit Report strings -->
  <string name="build_complete">&lt;b>Build&lt;/b> complete on %s</string>
  <string name="fleet_move_complete">&lt;b>Move&lt;/b> to %s complete</string>
  <string name="attack_on_star">&lt;b>Attack&lt;/b> on %s</string>
  <string name="fleet_details_not_destroyed" formatted="false">%.0f x %s</string>
  <string name="fleet_details_destroyed" formatted="false">%.0f x %s, and was destroyed</string>
  <string name="build_details">%s</string>

  <string name="create_empire">Create empire</string>
  <string name="create_empire_welcome">
    Before you begin, you need to tell us a little about your Empire. Fill in the details below to
    get started.
  </string>
  <string name="create_empire_name">
    What name will you go by in the game?
  </string>
  <string name="create_empire_hint">Player name</string>
  <string name="create_empire_switch_account_btn">I already have an empire</string>

  <string name="focus_hint">Drag the sliders to adjust focus.</string>
  <string name="attack_hint">These are the ships you have available to attack. Tap "Attack" to
      destroy this colony.</string>
  <string name="attack_hint_no_ships">You don\'t have any ships available top attack this colony.</string>
  <string name="colonize_hint">These are the ships you have available to colonize. Tap "Colonize" to
      begin colonising this planet.</string>
  <string name="colonize_hint_no_ships">You don\'t have any ships available to colonize this planet.</string>

  <string name="no_more_upgrades">No more upgrades</string>

  <string name="num_to_build">Number to build:</string>
  <string name="current_level">Current level:</string>
  <string name="time_to_build">Time to build:</string>
  <string name="time_to_upgrade">Time to upgrade:</string>

  <string name="pref_category_chat">Chat</string>
  <string name="pref_chat_profanity_filter">Filter profanity</string>

  <string name="pref_category_debug">Debug</string>
  <string name="pref_server_url">Server URL</string>

  <string name="fleet_move_instructions">
    Select the star you want to move your fleet to and click &quot;Move&quot;
  </string>
  <string name="fleet_merge_instructions">
    Select all of the fleets that you want to merge. You can only select fleets of the same type.
  </string>

  <string name="drawer_open">Open navigation drawer</string>
  <string name="drawer_close">Close navigation drawer</string>

  <string name="sign_in_failed_cancelled">Sign in cancelled.</string>
  <string name="sign_in_failed_error">Sign in error, please try again later.</string>
  <string name="signin_help">
    Signing in allows you to access your empire from another device. It also allows you to switch
    between more than one account. If you do not sign in, then your empire will be permanently lost
    if anything happens to your device or you uninstall War Worlds.\n
    \n
    To sign in, click &quot;Sign in&quot; below and choose an account.
  </string>
  <string name="signin_pending_help">
    Associating your account with your email…
  </string>
  <string name="signin_switch_user_help">
    You are currently signed in, but you can switch to a different account by clicking "Switch user"
    below.
  </string>
  <string name="signin_error_account_already_exists">
    This account is already associated with another email address. Do you want to associate it
    with this new address instead?
  </string>
  <string name="signin_error_email_already_associated">
    This email address is associated with a different account. Do you want to associate with this
    account instead? You will not be able to access the old account if you do.
  </string>
  <string name="signin_error_no_empire">
    This account, %s, does not have an empire associated with it. You can create one now if you
    like, by clicking "Create empire" below, or you can choose a different account by clicking
    "Cancel".
  </string>
  <string name="signin_error_unknown">
    Oops, something\'s gone wrong!
  </string>

  <string name="empire_settings_patreon">Patreon</string>
  <string name="empire_settings_patreon_desc">
    Connect your empire to your Patreon account in order to collect your benefits!\n\n
    <a href="https://www.patreon.com/codeka">And of course, click here to support me if you\'re not
      already!</a>
  </string>
  <string name="empire_settings_patreon_connect">Connect to Patreon</string>
  <string name="empire_settings_rename">Rename Empire</string>
  <string name="empire_settings_rename_desc">
    You can purchase the ability to rename your empire for %1s below. Enter a new name and click
    &quot;Rename&quot;.
  </string>
  <string name="empire_settings_shield">Upload Custom Shield</string>
  <string name="empire_settings_shield_desc">
    You can upload a custom shield image for %1s. Note: shield images will be reviewed and
    inappropriate images will be removed.\n\n
    <a href='http://www.war-worlds.com/doc/empire-settings/shield'>Click here for more
    information.</a>
  </string>
  <string name="empire_settings_shield_choose">Choose Shield</string>
  <string name="empire_settings_reset">Reset Empire</string>
  <string name="empire_settings_reset_desc" formatted="false">
    Resetting your empire will destroy your current empire and allow you to restart the game from a
    fresh star. The cost of this purchase increases as the size of your empire increase: to reset
    an empire with four stars or less is free, resetting an empire with up to 10 stars is %1s and
    resetting an empire with &gt; 10 stars is %2s.
  </string>
</resources>
