<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:parentTag="RelativeLayout"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
  <TextView
      android:id="@+id/stance_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:layout_marginLeft="12dp"
      android:layout_marginRight="12dp"
      android:text="@string/stance"
      android:layout_alignTop="@+id/stance"
      android:layout_alignBottom="@+id/stance"
      android:textAppearance="?android:attr/textAppearanceMedium" />

  <Spinner
      android:id="@+id/stance"
      style="@style/Spinner"
      android:layout_width="match_parent"
      android:layout_height="@dimen/button_height"
      android:layout_marginEnd="12dp"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:layout_toEndOf="@id/stance_label" />

  <View android:id="@+id/separator"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true" />

  <Button
      android:id="@+id/move_btn"
      android:layout_width="match_parent"
      android:layout_height="@dimen/button_height"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="12dp"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:layout_below="@+id/stance"
      android:layout_toEndOf="@id/separator"
      android:layout_alignParentEnd="true"
      android:text="@string/move" />

  <Button
      android:id="@+id/view_btn"
      android:layout_width="match_parent"
      android:layout_height="@dimen/button_height"
      android:layout_marginStart="12dp"
      android:layout_marginEnd="4dp"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:layout_below="@+id/stance"
      android:layout_toStartOf="@id/separator"
      android:text="@string/view" />

  <Button
      android:id="@+id/split_btn"
      android:layout_width="match_parent"
      android:layout_height="@dimen/button_height"
      android:layout_marginStart="4dp"
      android:layout_marginEnd="12dp"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:layout_alignParentEnd="true"
      android:layout_below="@+id/move_btn"
      android:layout_toEndOf="@id/separator"
      android:text="@string/split" />

  <Button
      android:id="@+id/merge_btn"
      android:layout_width="match_parent"
      android:layout_height="@dimen/button_height"
      android:layout_marginStart="12dp"
      android:layout_marginEnd="4dp"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="5dp"
      android:layout_below="@+id/move_btn"
      android:layout_toStartOf="@id/separator"
      android:text="@string/merge" />
</merge>