<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

  <ImageView
      android:id="@+id/title_icon"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_margin="5dp"
      android:src="@drawable/app_icon"/>

  <TextView
      android:id="@+id/title"
      style="@style/TitleText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentTop="true"
      android:layout_toEndOf="@+id/title_icon"
      android:text="@string/app_name" />

  <TextView
      android:id="@+id/signin_help"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/title"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="@dimen/tablet_margin_5dp"
      android:layout_marginRight="@dimen/tablet_margin_5dp"
      android:text="@string/signin_help" />

  <TextView
      android:id="@+id/signin_error"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/signin_help"
      android:layout_marginTop="16dp"
      android:layout_marginLeft="@dimen/tablet_margin_5dp"
      android:layout_marginRight="@dimen/tablet_margin_5dp" />

  <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/signin_error"
      android:inputType="textEmailAddress" />

  <View
      android:id="@+id/separator"
      android:layout_width="1dp"
      android:layout_height="1dp"
      android:layout_centerHorizontal="true"/>

  <Button
      android:id="@+id/signin_btn"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:layout_below="@id/email"
      android:layout_toEndOf="@id/separator"
      android:layout_marginBottom="5dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="@dimen/tablet_margin_5dp"
      android:layout_marginTop="5dp"
      android:text="@string/next"/>

  <Button
      android:id="@+id/cancel_btn"
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:layout_below="@id/email"
      android:layout_toStartOf="@id/separator"
      android:layout_marginBottom="5dp"
      android:layout_marginStart="@dimen/tablet_margin_5dp"
      android:layout_marginEnd="5dp"
      android:layout_marginTop="5dp"
      android:text="@string/cancel"/>

</merge>